@@ -1,3 +1,4 @@
+* Store selection tree state
 * Add order to Action Window
 * Add factor on number fields
 * Add calendar view
